--- a/index.html
+++ b/index.html
@@ -6,32 +6,14 @@
   <link href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css" rel="stylesheet">
   <style>
     body { font-family: Arial, sans-serif; margin: 30px; background: #faf9f6; }
-    #scrollTopTab { 
-      overflow-x: auto; 
-      width: 100%; 
-      height: 16px; 
-      margin-bottom: 4px; 
-      border: 1px solid #ddd; 
-      border-radius: 4px; 
-      background: #f8f9fa;
-      display: block;
-    }
-    #scrollSyncTab { 
-      height: 1px; 
-      background: transparent;
-      min-width: 100px;
-    }
+    #scrollTopTab { overflow-x: auto; width: 100%; height: 16px; margin-bottom: 4px; border: 1px solid #ddd; border-radius: 4px; background: #faf9f6; }
+    #scrollSyncTab { height: 1px; }
     #tabela { margin-top: 0px; }
     .tabulator .tabulator-group { background: #e3e6ed; font-weight: bold; }
     .linha-totais { background: #f6e6b3 !important; font-weight: bold; }
-    #scrollTopTab::-webkit-scrollbar { height: 12px; }
-    #scrollTopTab::-webkit-scrollbar-track { background: #f1f1f1; border-radius: 6px; }
-    #scrollTopTab::-webkit-scrollbar-thumb { background: #888; border-radius: 6px; border: 1px solid #f1f1f1; }
-    #scrollTopTab::-webkit-scrollbar-thumb:hover { background: #555; }
-    #tabela .tabulator-tableholder::-webkit-scrollbar { height: 12px; }
-    #tabela .tabulator-tableholder::-webkit-scrollbar-track { background: #f1f1f1; border-radius: 6px; }
-    #tabela .tabulator-tableholder::-webkit-scrollbar-thumb { background: #888; border-radius: 6px; border: 1px solid #f1f1f1; }
-    #tabela .tabulator-tableholder::-webkit-scrollbar-thumb:hover { background: #555; }
+    .icone-historico { font-size: 18px; cursor: pointer; text-align: center; display: block; margin: 0 auto; }
+    .icone-historico.com-historico { color: #0074D9; }
+    .icone-historico.sem-historico { color: #AAA; }
   </style>
 </head>
 <body>
@@ -43,7 +25,7 @@
 
   <script src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"></script>
   <script>
-    // Utilitários padrão Openeem
+    // === Utilitários padrão ===
     function calcTextWidth(text, font = "14px Arial") {
       const canvas = document.createElement("canvas");
       const ctx = canvas.getContext("2d");
@@ -78,11 +60,29 @@
         return dados.some(row => valorNumerico(row[col]) > 0);
       });
     }
+    function calcularLinhaTotais(dados, colunasVisiveis) {
+      if (!dados || !Array.isArray(dados) || dados.length === 0) return {};
+      const total = {};
+      colunasVisiveis.forEach(k => {
+        if (k === "Classificação" || k === "Descrição do Fornecedor/Cliente" || k === "Fornecedor/Cliente") {
+          total[k] = "";
+        } else {
+          total[k] = dados.reduce((acc, row) => acc + valorNumerico(row[k]), 0) || "";
+        }
+      });
+      total["__isTotal"] = true;
+      return total;
+    }
+
+    // === NOVA FUNÇÃO gerarColunasDinamicas com ícone de histórico como PRIMEIRA coluna ===
     function gerarColunasDinamicas(dados, colunasVisiveis) {
       if (!dados || !Array.isArray(dados) || dados.length === 0) return [];
       const font = "14px Arial";
-      return colunasVisiveis.map(key => {
+
+      // 1. Gera as colunas padrão normalmente
+      let baseCols = colunasVisiveis.map(key => {
         if (key === "Fornecedor/Cliente") return { title: key, field: key, visible: false };
+        if (["Descrição do Fornecedor/Cliente"].includes(key)) return { title: key, field: key, width: 180 };
         if (key.match(/^\d{2}\/\d{2}/) || key === "VENCIDO") {
           let maxWidth = calcTextWidth(key, font);
           dados.forEach(row => {
@@ -103,73 +103,33 @@
             formatter: moedaBRLSemCentavos
           };
         }
-        if (["Descrição do Fornecedor/Cliente"].includes(key)) return { title: key, field: key, width: 180 };
         return { title: key, field: key, width: 150 };
       });
-    }
-    function calcularLinhaTotais(dados, colunasVisiveis) {
-      if (!dados || !Array.isArray(dados) || dados.length === 0) return {};
-      const total = {};
-      colunasVisiveis.forEach(k => {
-        if (k === "Classificação" || k === "Descrição do Fornecedor/Cliente" || k === "Fornecedor/Cliente") {
-          total[k] = "";
-        } else {
-          total[k] = dados.reduce((acc, row) => acc + valorNumerico(row[k]), 0) || "";
+
+      // 2. Cria a coluna do ícone como PRIMEIRA
+      const historicoCol = {
+        title: "",
+        field: "__historico",
+        width: 36,
+        hozAlign: "center",
+        headerSort: false,
+        resizable: false,
+        cssClass: "col-historico",
+        formatter: function(cell) {
+          // Aqui, depois mudamos para detectar histórico real
+          return `<span class="icone-historico sem-historico" title="Ver histórico">&#128172;</span>`;
+        },
+        cellClick: function(e, cell) {
+          alert("Histórico para: " + cell.getRow().getData()["Descrição do Fornecedor/Cliente"]);
         }
-      });
-      total["__isTotal"] = true;
-      return total;
-    }
+      };
+      // Insere como PRIMEIRA coluna
+      baseCols.unshift(historicoCol);
 
-    // Sincroniza e estiliza scroll fake (definitivo)
-    function setupScrollSync(table) {
-      const scrollTopTab = document.getElementById("scrollTopTab");
-      const scrollSyncTab = document.getElementById("scrollSyncTab");
-      if (!table || !scrollTopTab || !scrollSyncTab) return;
-
-      // Função que atualiza largura do fake scrollbar e mostra/esconde
-      function updateScrollbarWidth() {
-        const tableholder = table.element.querySelector(".tabulator-tableholder");
-        if (tableholder) {
-          const scrollWidth = tableholder.scrollWidth;
-          const clientWidth = tableholder.clientWidth;
-          if (scrollWidth > clientWidth) {
-            scrollSyncTab.style.width = scrollWidth + "px";
-            scrollTopTab.style.display = "block";
-          } else {
-            scrollTopTab.style.display = "none";
-          }
-        }
-      }
-      updateScrollbarWidth();
-
-      // Remove listeners antigos e previne loop
-      scrollTopTab.onscroll = null;
-      table.off("scrollHorizontal");
-      table.on("scrollHorizontal", function(left) {
-        scrollTopTab.onscroll = null;
-        scrollTopTab.scrollLeft = left;
-        setTimeout(() => {
-          scrollTopTab.onscroll = syncFromFakeToTable;
-        }, 0);
-      });
-
-      // Fake controla real
-      function syncFromFakeToTable() {
-        const tableholder = table.element.querySelector(".tabulator-tableholder");
-        if (tableholder) {
-          tableholder.scrollLeft = scrollTopTab.scrollLeft;
-        }
-      }
-      scrollTopTab.onscroll = syncFromFakeToTable;
-
-      // Atualiza largura em eventos de ciclo de vida
-      table.on("renderComplete", updateScrollbarWidth);
-      table.on("dataLoaded", updateScrollbarWidth);
-      table.on("columnResized", updateScrollbarWidth);
+      return baseCols;
     }
 
-    // Render principal
+    // === Restante do código: drawTable, setupScrollSync, etc ===
     function drawTable(dadosOriginais) {
       if (window.table) {
         window.table.destroy();
@@ -237,10 +197,51 @@
       });
     }
 
+    function setupScrollSync(table) {
+      const scrollTopTab = document.getElementById("scrollTopTab");
+      const scrollSyncTab = document.getElementById("scrollSyncTab");
+      if (!table || !scrollTopTab || !scrollSyncTab) return;
+
+      function updateScrollbarWidth() {
+        const tableholder = table.element.querySelector(".tabulator-tableholder");
+        if (tableholder) {
+          const scrollWidth = tableholder.scrollWidth;
+          const clientWidth = tableholder.clientWidth;
+          if (scrollWidth > clientWidth) {
+            scrollSyncTab.style.width = scrollWidth + "px";
+            scrollTopTab.style.display = "block";
+          } else {
+            scrollTopTab.style.display = "none";
+          }
+        }
+      }
+      updateScrollbarWidth();
+
+      scrollTopTab.onscroll = null;
+      table.off("scrollHorizontal");
+      table.on("scrollHorizontal", function(left) {
+        scrollTopTab.onscroll = null;
+        scrollTopTab.scrollLeft = left;
+        setTimeout(() => {
+          scrollTopTab.onscroll = syncFromFakeToTable;
+        }, 0);
+      });
+      function syncFromFakeToTable() {
+        const tableholder = table.element.querySelector(".tabulator-tableholder");
+        if (tableholder) {
+          tableholder.scrollLeft = scrollTopTab.scrollLeft;
+        }
+      }
+      scrollTopTab.onscroll = syncFromFakeToTable;
+
+      table.on("renderComplete", updateScrollbarWidth);
+      table.on("dataLoaded", updateScrollbarWidth);
+      table.on("columnResized", updateScrollbarWidth);
+    }
+
     // Inicializa vazio
     drawTable([]);
 
-    // Recebe dados do Appsmith via postMessage
     window.addEventListener("message", function(event) {
       try {
         let data = typeof event.data === "string" ? JSON.parse(event.data) : event.data;
